[package]
name = "hello-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.1"
tokio-postgres = "0.7.2"
envconfig = "0.10.0"
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "postgres", "uuid", "time" ] }